--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,16 @@
 Django==1.4.8
-resolver==0.2.1
-selector==0.8.11
-Paste==1.7.2
-PasteDeploy==1.3.3
-PasteScript==1.7.3
-cdap==1.0
 httplib2==0.7.7
 restclient==0.11.0
 feedparser==4.1
 Markdown==2.1.1
-pyenchant==1.5.1
 simplejson==3.3.0
 smartypants==1.6.0.2
 uuid==1.30
 psycopg2==2.5.1
 Pillow==1.7.8
-nose==1.1.2
+nose==1.3.0
 versiontools==1.9.1
-statsd==0.5.1
+statsd==2.0.2
 pep8==1.4
 pyflakes==0.5.0
 flake8==1.7.0
@@ -28,7 +21,7 @@ ipython==0.13.1
 ipdb==0.7
 lettuce==0.2.14
 rdflib==3.1.0
-selenium==2.20.0
+selenium==2.35.0
 coverage==3.5.3
 requests==0.13.3
 logilab-common==0.59.0
@@ -37,9 +30,9 @@ pylint==0.26.0
 six==1.2.0
 python-dateutil==2.1
 mimeparse==0.1.3
-django-tastypie==0.9.11
 factory_boy==2.1.1
 
+django-tastypie==0.9.15
 djangowind==0.11.0
 sorl==3.1
 tagging==0.3-pre
@@ -51,11 +44,11 @@ django-paging==0.2.2
 django-munin==0.1.1
 South==0.8.1
 django-annoying==0.7.6
-django-nose==0.1.3
+django-nose==1.2
 django-appconf==0.4.1
 BeautifulSoup==3.2.1
 django_compressor==1.3
-django-statsd-mozilla==0.3.3
+django-statsd-mozilla==0.3.8.7
 raven==0.7.0
 django-bootstrap-form==2.0.3
 django-debug-toolbar==0.9.4
@@ -63,10 +56,10 @@ django-waffle==0.9.0
 django-jenkins==0.14.0
 django-smoketest==0.1.3
 django-extensions==1.1.0
-django-treebeard==1.61
-django-pagetree==0.12.1
-django-pageblocks==0.5.9
-django-quizblock==0.6.11
+django-treebeard==2.0b2
+django-pagetree==0.12.4
+django-pageblocks==0.5.11
+django-quizblock==0.6.13
 django-pagetree_export==0.4
 django-stagingcontext==0.1.0
 django-registration==0.8
