--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Django==1.5.7
+Django==1.6.4
 httplib2==0.7.7
 restclient==0.11.0
 feedparser==4.1
-Markdown==2.1.1
+Markdown==2.3.1
 simplejson==3.3.0
 smartypants==1.6.0.2
 uuid==1.30
@@ -36,35 +36,36 @@ six==1.2.0
 python-dateutil==2.1
 mimeparse==0.1.3
 factory_boy==2.1.1
+sqlparse==0.1.11
 
 django-tastypie==0.9.15
-djangowind==0.11.0
+djangowind==0.12.1
 sorl==3.1
 tagging==0.3-pre
 typogrify==1.0
-django-staticmedia==0.2
 django-indexer==0.2.1
 django-templatetag-sugar==0.1
 django-paging==0.2.2
-django-munin==0.1.1
-South==0.8.1
+South==0.8.4
 django-annoying==0.7.6
 django-nose==1.2
 django-appconf==0.4.1
 BeautifulSoup==3.2.1
 django_compressor==1.3
-django-statsd-mozilla==0.3.8.7
+django-statsd-mozilla==0.3.11
 raven==4.0.3
 django-bootstrap-form==2.0.3
-django-debug-toolbar==0.9.4
+django-debug-toolbar==1.1
 django-waffle==0.9.0
-django-jenkins==0.14.0
-django-smoketest==0.1.3
+django-jenkins==0.15.0
+django-smoketest==0.2.2
 django-extensions==1.1.0
 django-treebeard==2.0b2
-django-pagetree==0.12.4
+django-pagetree==0.14.2
 django-pageblocks==0.5.11
-django-quizblock==0.6.13
+django-quizblock==0.6.15
 django-pagetree_export==0.4
 django-stagingcontext==0.1.0
 django-registration==1.0
+django-markwhat==1.0
+django-localflavor==1.0
