--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,42 @@
 Django==1.6.5
-httplib2==0.7.7
+httplib2==0.9
 restclient==0.11.0
-feedparser==4.1
-Markdown==2.3.1
-simplejson==3.4.0
+feedparser==5.1.3
+Markdown==2.5.2
 smartypants==1.6.0.2
 uuid==1.30
-psycopg2==2.5.1
-Pillow==2.3.0
-nose==1.3.0
+psycopg2==2.5.4
+Pillow==2.7.0
+nose==1.3.4
 versiontools==1.9.1
-statsd==2.0.2
-pep8==1.4
-pyflakes==0.5.0
-flake8==1.7.0
+statsd==3.0.1
+pep8==1.5.7
+pyflakes==0.8.1
+mccabe==0.2.1
+flake8==2.3.0
 lxml==3.2.3
 fuzzywuzzy==0.1
 sure==1.1.7
-ipython==0.13.1
-ipdb==0.7
+ipython==1.2.1
+ipdb==0.8
 extras==0.0.3
+mimeparse==0.1.3
 python-mimeparse==0.1.4
 testtools==0.9.35
 testscenarios==0.4
 python-subunit==0.0.18
 lettuce==0.2.19ccnmtl
-rdflib==3.1.0
+rdflib==4.1.2
 selenium==2.35.0
 coverage==3.5.3
 requests==0.13.3
 logilab-common==0.59.0
 logilab-astng==0.24.1
-pylint==0.26.0
-six==1.2.0
-python-dateutil==2.1
-mimeparse==0.1.3
-factory_boy==2.1.1
-sqlparse==0.1.11
+pylint==1.4.1
+six==1.9.0
+python-dateutil==2.4.0
+factory_boy==2.4.1
+sqlparse==0.1.14
 
 django-tastypie==0.9.15
 djangowind==0.13.2
@@ -46,26 +46,26 @@ typogrify==1.0
 django-indexer==0.2.1
 django-templatetag-sugar==0.1
 django-paging==0.2.2
-South==0.8.4
-django-annoying==0.7.6
-django-nose==1.2
-django-appconf==0.4.1
+South==1.0.2
+django-annoying==0.8.0
+django-nose==1.3
+django-appconf==0.6
 BeautifulSoup==3.2.1
-django_compressor==1.3
-django-statsd-mozilla==0.3.11
-raven==4.0.3
-django-bootstrap-form==2.0.3
-django-debug-toolbar==1.1
-django-waffle==0.9.0
-django-jenkins==0.15.0
-django-smoketest==0.2.2
-django-extensions==1.1.0
+django_compressor==1.4
+django-statsd-mozilla==0.3.14
+raven==5.1.1
+django-bootstrap-form==3.1.0
+django-debug-toolbar==1.2.2
+django-waffle==0.10.1
+django-jenkins==0.16.4
+django-smoketest==0.3.0
+django-extensions==1.4.9
 django-treebeard==2.0b2
-django-pagetree==0.14.6
-django-pageblocks==0.5.11
-django-quizblock==0.9.4
+django-pagetree==1.0.6
+django-pageblocks==1.0.0
+django-quizblock==1.0.4
 django-pagetree_export==0.4
 django-stagingcontext==0.1.0
-django-registration==1.0
-django-markwhat==1.0
+django-registration==1.1
+django-markwhat==2014.9.20
 django-localflavor==1.0
