--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,7 @@ django-annoying==0.8.0
 django-nose==1.3
 django-appconf==0.6
 BeautifulSoup==3.2.1
-django_compressor==1.4
+django-compressor==1.5
 django-statsd-mozilla==0.3.14
 raven==5.2.0
 django-bootstrap-form==3.1.0
