--- a/requirements.txt
+++ b/requirements.txt
@@ -65,3 +65,8 @@ django-stagingcontext==0.1.0
 django-registration==1.1
 django-markwhat==1.3
 django-localflavor==1.0
+
+gunicorn==19.3.0
+boto==2.38.0
+django-storages-redux==1.2.3
+django-cacheds3storage==0.1.1
