--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,15 @@ mccabe==0.3.1
 flake8==2.3.0
 lxml==3.4.4
 sure==1.2.12
+traitlets==4.0.0
+ipython_genutils==0.1.0
+decorator==4.0.2
+pexpect==3.3
+pickleshare==0.5
+simplegeneric==0.8.1
+path.py==8.1.1
 fuzzywuzzy==0.6.0
-ipython==1.2.1
+ipython==4.0.0
 ipdb==0.8
 extras==0.0.3
 mimeparse==0.1.3
