--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,8 @@ logilab-astng==0.24.3
 pylint==1.4.4
 six==1.9.0
 python-dateutil==2.4.2
-factory_boy==2.4.1
+fake-factory==0.5.3
+factory_boy==2.6.0
 sqlparse==0.1.16
 
 django-tastypie==0.12.2
