--- a/requirements.txt
+++ b/requirements.txt
@@ -49,6 +49,7 @@ python-dateutil==2.4.2
 fake-factory==0.5.3
 factory_boy==2.6.0
 sqlparse==0.1.18
+contextlib2==0.5.1
 
 django-tastypie==0.12.2
 djangowind==0.14.1
