--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,8 @@ fake-factory==0.5.3
 factory_boy==2.6.0
 sqlparse==0.1.18
 contextlib2==0.5.1
+rcssmin==1.0.6
+rjsmin==1.0.12
 
 django-tastypie==0.12.2
 djangowind==0.14.1
