--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ extras==0.0.3
 mimeparse==0.1.3
 python-mimeparse==0.1.4
 pbr==1.9.1
+fixtures==2.0.0
 testtools==2.1.0
 testscenarios==0.5.0
 python-subunit==1.2.0
