--- a/requirements.txt
+++ b/requirements.txt
@@ -48,7 +48,8 @@ logilab-astng==0.24.3
 pylint==1.5.5
 six==1.10.0
 python-dateutil==2.5.3
-fake-factory==0.5.3
+ipaddress==1.0.16
+fake-factory==0.5.7
 factory_boy==2.6.1
 sqlparse==0.1.19
 contextlib2==0.5.3
