--- a/requirements.txt
+++ b/requirements.txt
@@ -89,5 +89,6 @@ boto==2.42.0
 django-storages-redux==1.3.2
 django-cacheds3storage==0.1.2
 django-ga-context==0.1.0
+django-smtp-ssl==1.0
 
 ccnmtlsettings==0.3.0
