--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,9 @@ pep8==1.7.0
 pyflakes==1.2.3
 mccabe==0.5.0
 pycodestyle==2.0.0
-flake8==2.6.2
+enum34==1.1.6
+configparser==3.5.0
+flake8==3.0.2
 lxml==3.6.1
 sure==1.4.0
 traitlets==4.2.2
