--- a/requirements.txt
+++ b/requirements.txt
@@ -50,7 +50,7 @@ pylint==1.6.4
 six==1.10.0
 python-dateutil==2.6.0
 ipaddress==1.0.17
-fake-factory==0.7.2
+Faker==0.7.3
 factory_boy==2.7.0
 sqlparse==0.2.2
 contextlib2==0.5.4
