--- a/requirements.txt
+++ b/requirements.txt
@@ -89,7 +89,7 @@ django-localflavor==1.4.1
 django-impersonate==1.1
 gunicorn==19.6.0
 boto==2.45.0
-django-storages-redux==1.3.2
+django-storages==1.5.2
 django-cacheds3storage==0.1.2
 django-ga-context==0.1.0
 django-smtp-ssl==1.0
