--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
---index-url https://pypi.ccnmtl.columbia.edu/
 Django==1.8.18
-httplib2==0.10.2
+httplib2==0.10.3
 feedparser==5.2.1
 Markdown==2.6.8
 smartypants==2.0.0
@@ -37,7 +36,7 @@ fixtures==3.0.0
 testtools==2.3.0
 testscenarios==0.5.0
 python-subunit==1.2.0
-lettuce==0.2.19ccnmtl
+requirements/src/lettuce-0.2.19ccnmtl-py2-none-any.whl
 rdflib==4.2.2
 selenium==2.53.6
 coverage==4.4.1
@@ -67,7 +66,7 @@ rjsmin==1.0.12
 
 django-tastypie==0.13.3
 djangowind==1.0.0
-sorl==3.1
+requirements/src/sorl-3.1.tar.gz
 typogrify==2.0.7
 django-indexer==0.3.0
 django-templatetag-sugar==1.0
@@ -89,9 +88,9 @@ django-smoketest==1.0.0
 django-extensions==1.7.9
 django-treebeard==4.1.1
 django-pagetree==1.3.2
-django-pageblocks==1.0.4
+django-pageblocks==1.1.0
 django-quizblock==1.2.2
-django-pagetree_export==0.4
+requirements/src/django-pagetree_export-0.4.tar.gz
 django-stagingcontext==0.1.0
 django-registration==2.2
 django-markwhat==1.5.1
