--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==1.11.2
+Django==1.8.18 # pyup: <1.9
 httplib2==0.10.3
 feedparser==5.2.1
 Markdown==2.6.8
@@ -26,10 +26,10 @@ pexpect==4.2.1
 pickleshare==0.7.4
 simplegeneric==0.8.1
 fuzzywuzzy==0.15.0
-ipython==6.1.0
+ipython==5.4.1 # pyup: <6.0.0
 ipdb==0.10.3
 extras==1.0.0
-mimeparse==0.1.4
+mimeparse==0.1.3 # pyup: <0.1.4 # 0.1.4 seems to be missing from pypi
 python-mimeparse==1.6.0
 pbr==3.0.1
 fixtures==3.0.0
@@ -43,6 +43,8 @@ coverage==4.4.1
 pyasn1==0.2.3
 pyOpenSSL==17.0.0
 ndg-httpsclient==0.4.2
+
+pytz==2017.2
 
 chardet==3.0.4
 idna==2.5
